samples/_failures_safe/1761154108_f98f11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a004ee6.c: In function ‘main’:
./samples/SAFE/__tmp_9a004ee6.c:176:5: error: expected expression at end of input
  176 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_9a004ee6.c:176:5: error: expected declaration or statement at end of input
